--- a/help_and_support.html
+++ b/help_and_support.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -15,7 +13,7 @@
     
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
-        URL_ROOT:    '',
+        URL_ROOT:    './',
         VERSION:     '0.1.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
@@ -26,7 +24,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="Embedded Software Update Documentation 0.1.0 documentation" href="index.html" />
-    <link rel="next" title="SWUPDATE: roadmap" href="roadmap.html" />
+    <link rel="next" title="Project’s roadmap" href="roadmap.html" />
     <link rel="prev" title="Handlers" href="handlers.html" /> 
   </head>
   <body>
@@ -37,7 +35,7 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="roadmap.html" title="SWUPDATE: roadmap"
+          <a href="roadmap.html" title="Project’s roadmap"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="handlers.html" title="Handlers"
@@ -82,7 +80,7 @@ here.</p>
                         title="previous chapter">Handlers</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="roadmap.html"
-                        title="next chapter">SWUPDATE: roadmap</a></p>
+                        title="next chapter">Project&#8217;s roadmap</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/help_and_support.txt"
@@ -112,7 +110,7 @@ here.</p>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="roadmap.html" title="SWUPDATE: roadmap"
+          <a href="roadmap.html" title="Project’s roadmap"
              >next</a> |</li>
         <li class="right" >
           <a href="handlers.html" title="Handlers"
@@ -122,7 +120,7 @@ here.</p>
     </div>
     <div class="footer">
         &copy; Copyright 2013, Stefano Babic.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.2.
     </div>
   </body>
 </html>
