Updated documentation with API
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/handlers.html
+++ b/handlers.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="Embedded Software Update Documentation 0.1.0 documentation" href="index.html" />
-    <link rel="next" title="Help and support" href="help_and_support.html" />
+    <link rel="next" title="swupdate: API for external programs" href="swupdate-ipc.html" />
     <link rel="prev" title="swupdate: syntax and tags with the default parser" href="sw-description.html" /> 
   </head>
   <body>
@@ -35,7 +35,7 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="help_and_support.html" title="Help and support"
+          <a href="swupdate-ipc.html" title="swupdate: API for external programs"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="sw-description.html" title="swupdate: syntax and tags with the default parser"
@@ -166,8 +166,8 @@ security questions, because it changes swupdate&#8217;s behavior.</p>
   <p class="topless"><a href="sw-description.html"
                         title="previous chapter">swupdate: syntax and tags with the default parser</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="help_and_support.html"
-                        title="next chapter">Help and support</a></p>
+  <p class="topless"><a href="swupdate-ipc.html"
+                        title="next chapter">swupdate: API for external programs</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/handlers.txt"
@@ -197,7 +197,7 @@ security questions, because it changes swupdate&#8217;s behavior.</p>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="help_and_support.html" title="Help and support"
+          <a href="swupdate-ipc.html" title="swupdate: API for external programs"
              >next</a> |</li>
         <li class="right" >
           <a href="sw-description.html" title="swupdate: syntax and tags with the default parser"
