--- a/help_and_support.html
+++ b/help_and_support.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="Embedded Software Update Documentation 0.1.0 documentation" href="index.html" />
     <link rel="next" title="Project’s roadmap" href="roadmap.html" />
-    <link rel="prev" title="Handlers" href="handlers.html" /> 
+    <link rel="prev" title="swupdate: API for external programs" href="swupdate-ipc.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,7 +38,7 @@
           <a href="roadmap.html" title="Project’s roadmap"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="handlers.html" title="Handlers"
+          <a href="swupdate-ipc.html" title="swupdate: API for external programs"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">Embedded Software Update Documentation 0.1.0 documentation</a> &raquo;</li> 
       </ul>
@@ -76,8 +76,8 @@ here.</p>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="handlers.html"
-                        title="previous chapter">Handlers</a></p>
+  <p class="topless"><a href="swupdate-ipc.html"
+                        title="previous chapter">swupdate: API for external programs</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="roadmap.html"
                         title="next chapter">Project&#8217;s roadmap</a></p>
@@ -113,7 +113,7 @@ here.</p>
           <a href="roadmap.html" title="Project’s roadmap"
              >next</a> |</li>
         <li class="right" >
-          <a href="handlers.html" title="Handlers"
+          <a href="swupdate-ipc.html" title="swupdate: API for external programs"
              >previous</a> |</li>
         <li><a href="index.html">Embedded Software Update Documentation 0.1.0 documentation</a> &raquo;</li> 
       </ul>
