--- a/handlers.html
+++ b/handlers.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Handlers &mdash; Embedded Software Update Documentation 0.1.0 documentation</title>
+    <title>Handlers &mdash; Embedded Software Update Documentation 2014.07 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.1.0',
+        VERSION:     '2014.07',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Embedded Software Update Documentation 0.1.0 documentation" href="index.html" />
+    <link rel="top" title="Embedded Software Update Documentation 2014.07 documentation" href="index.html" />
     <link rel="next" title="swupdate: API for external programs" href="swupdate-ipc.html" />
     <link rel="prev" title="swupdate: syntax and tags with the default parser" href="sw-description.html" /> 
   </head>
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="sw-description.html" title="swupdate: syntax and tags with the default parser"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 0.1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2014.07 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -202,11 +202,11 @@ security questions, because it changes swupdate&#8217;s behavior.</p>
         <li class="right" >
           <a href="sw-description.html" title="swupdate: syntax and tags with the default parser"
              >previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 0.1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2014.07 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2013, Stefano Babic.
+        &copy; Copyright 2013-2014, Stefano Babic.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.2.
     </div>
   </body>
