--- a/roadmap.html
+++ b/roadmap.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Project’s roadmap &mdash; Embedded Software Update Documentation 0.1.0 documentation</title>
+    <title>Project’s roadmap &mdash; Embedded Software Update Documentation 2014.07 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.1.0',
+        VERSION:     '2014.07',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,8 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Embedded Software Update Documentation 0.1.0 documentation" href="index.html" />
+    <link rel="top" title="Embedded Software Update Documentation 2014.07 documentation" href="index.html" />
+    <link rel="next" title="Browse swupdate sources" href="getsources.html" />
     <link rel="prev" title="Help and support" href="help_and_support.html" /> 
   </head>
   <body>
@@ -34,9 +35,12 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="getsources.html" title="Browse swupdate sources"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
           <a href="help_and_support.html" title="Help and support"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 0.1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2014.07 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -123,6 +127,9 @@ of the image to be installed).</p>
   <h4>Previous topic</h4>
   <p class="topless"><a href="help_and_support.html"
                         title="previous chapter">Help and support</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="getsources.html"
+                        title="next chapter">Browse swupdate  sources</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/roadmap.txt"
@@ -152,13 +159,16 @@ of the image to be installed).</p>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
+          <a href="getsources.html" title="Browse swupdate sources"
+             >next</a> |</li>
+        <li class="right" >
           <a href="help_and_support.html" title="Help and support"
              >previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 0.1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2014.07 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2013, Stefano Babic.
+        &copy; Copyright 2013-2014, Stefano Babic.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.2.
     </div>
   </body>
