--- a/overview.html
+++ b/overview.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="Embedded Software Update Documentation 2014.07 documentation" href="index.html" />
     <link rel="next" title="swupdate: software update for embedded system" href="swupdate.html" />
-    <link rel="prev" title="swupdate Documentation" href="index.html" /> 
+    <link rel="prev" title="Updating an embedded system" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,7 +38,7 @@
           <a href="swupdate.html" title="swupdate: software update for embedded system"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="swupdate Documentation"
+          <a href="index.html" title="Updating an embedded system"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">Embedded Software Update Documentation 2014.07 documentation</a> &raquo;</li> 
       </ul>
@@ -364,7 +364,7 @@ can or cannot have this feature.</p>
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="index.html"
-                        title="previous chapter">swupdate Documentation</a></p>
+                        title="previous chapter">Updating an embedded system</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="swupdate.html"
                         title="next chapter">swupdate: software update for embedded system</a></p>
@@ -400,7 +400,7 @@ can or cannot have this feature.</p>
           <a href="swupdate.html" title="swupdate: software update for embedded system"
              >next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="swupdate Documentation"
+          <a href="index.html" title="Updating an embedded system"
              >previous</a> |</li>
         <li><a href="index.html">Embedded Software Update Documentation 2014.07 documentation</a> &raquo;</li> 
       </ul>
