--- a/overview.html
+++ b/overview.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Software Management on embedded systems &mdash; Embedded Software Update Documentation 2014.07 documentation</title>
+    <title>Software Management on embedded systems &mdash; Embedded Software Update Documentation 2016.- documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2014.07',
+        VERSION:     '2016.-',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Embedded Software Update Documentation 2014.07 documentation" href="index.html" />
+    <link rel="top" title="Embedded Software Update Documentation 2016.- documentation" href="index.html" />
     <link rel="next" title="swupdate: software update for embedded system" href="swupdate.html" />
     <link rel="prev" title="Updating an embedded system" href="index.html" /> 
   </head>
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="index.html" title="Updating an embedded system"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 2014.07 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2016.- documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -402,11 +402,11 @@ can or cannot have this feature.</p>
         <li class="right" >
           <a href="index.html" title="Updating an embedded system"
              >previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 2014.07 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2016.- documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2013-2014, Stefano Babic.
+        &copy; Copyright 2013-2015, Stefano Babic.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.2.
     </div>
   </body>
