--- a/help_and_support.html
+++ b/help_and_support.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="Embedded Software Update Documentation 2016.- documentation" href="index.html" />
-    <link rel="next" title="Project’s roadmap" href="roadmap.html" />
+    <link rel="next" title="Project’s road-map" href="roadmap.html" />
     <link rel="prev" title="swupdate: API for external programs" href="swupdate-ipc.html" /> 
   </head>
   <body>
@@ -35,7 +35,7 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="roadmap.html" title="Project’s roadmap"
+          <a href="roadmap.html" title="Project’s road-map"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="swupdate-ipc.html" title="swupdate: API for external programs"
@@ -94,7 +94,7 @@ here.</p>
                         title="previous chapter">swupdate: API for external programs</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="roadmap.html"
-                        title="next chapter">Project&#8217;s roadmap</a></p>
+                        title="next chapter">Project&#8217;s road-map</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/help_and_support.txt"
@@ -124,7 +124,7 @@ here.</p>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="roadmap.html" title="Project’s roadmap"
+          <a href="roadmap.html" title="Project’s road-map"
              >next</a> |</li>
         <li class="right" >
           <a href="swupdate-ipc.html" title="swupdate: API for external programs"
