Synch mit sources
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/handlers.html
+++ b/handlers.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="Embedded Software Update Documentation 2016.- documentation" href="index.html" />
     <link rel="next" title="swupdate: API for external programs" href="swupdate-ipc.html" />
-    <link rel="prev" title="Update images from verified source" href="signed_images.html" /> 
+    <link rel="prev" title="swupdate: syntax and tags with the default parser" href="sw-description.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,7 +38,7 @@
           <a href="swupdate-ipc.html" title="swupdate: API for external programs"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="signed_images.html" title="Update images from verified source"
+          <a href="sw-description.html" title="swupdate: syntax and tags with the default parser"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">Embedded Software Update Documentation 2016.- documentation</a> &raquo;</li> 
       </ul>
@@ -163,8 +163,8 @@ security questions, because it changes swupdate&#8217;s behavior.</p>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="signed_images.html"
-                        title="previous chapter">Update images from verified source</a></p>
+  <p class="topless"><a href="sw-description.html"
+                        title="previous chapter">swupdate: syntax and tags with the default parser</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="swupdate-ipc.html"
                         title="next chapter">swupdate: API for external programs</a></p>
@@ -200,7 +200,7 @@ security questions, because it changes swupdate&#8217;s behavior.</p>
           <a href="swupdate-ipc.html" title="swupdate: API for external programs"
              >next</a> |</li>
         <li class="right" >
-          <a href="signed_images.html" title="Update images from verified source"
+          <a href="sw-description.html" title="swupdate: syntax and tags with the default parser"
              >previous</a> |</li>
         <li><a href="index.html">Embedded Software Update Documentation 2016.- documentation</a> &raquo;</li> 
       </ul>
