--- a/sw-description.html
+++ b/sw-description.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="Embedded Software Update Documentation 2016.- documentation" href="index.html" />
-    <link rel="next" title="Update images from verified source" href="signed_images.html" />
+    <link rel="next" title="Handlers" href="handlers.html" />
     <link rel="prev" title="swupdate: software update for embedded system" href="swupdate.html" /> 
   </head>
   <body>
@@ -35,7 +35,7 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="signed_images.html" title="Update images from verified source"
+          <a href="handlers.html" title="Handlers"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="swupdate.html" title="swupdate: software update for embedded system"
@@ -681,8 +681,8 @@ compared with the entries in</td>
   <p class="topless"><a href="swupdate.html"
                         title="previous chapter">swupdate: software update for embedded system</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="signed_images.html"
-                        title="next chapter">Update images from verified source</a></p>
+  <p class="topless"><a href="handlers.html"
+                        title="next chapter">Handlers</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/sw-description.txt"
@@ -712,7 +712,7 @@ compared with the entries in</td>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="signed_images.html" title="Update images from verified source"
+          <a href="handlers.html" title="Handlers"
              >next</a> |</li>
         <li class="right" >
           <a href="swupdate.html" title="swupdate: software update for embedded system"
