Add reboot button to website example
At the end of an update, a reboot is required.
Add example for that.

Signed-off-by: Daniel Schnell <daniel.schnell.extern@ifm.com>
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/www/index.html
+++ b/www/index.html
@@ -27,8 +27,12 @@
 
 </fieldset>
 
+
 </form>
 
+<form method='POST' action='/rebootTarget'>
+	<input type='submit' value='Reboot Device'>
+</form>
 <div id="progress"></div>
 
 <div id="messages">
