--- a/help_and_support.html
+++ b/help_and_support.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Help and support &mdash; Embedded Software Update Documentation 2016.- documentation</title>
+    <title>Help and support &mdash; Embedded Software Update Documentation 2016.04 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2016.-',
+        VERSION:     '2016.04',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,9 +23,9 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Embedded Software Update Documentation 2016.- documentation" href="index.html" />
+    <link rel="top" title="Embedded Software Update Documentation 2016.04 documentation" href="index.html" />
     <link rel="next" title="Project’s road-map" href="roadmap.html" />
-    <link rel="prev" title="swupdate: API for external programs" href="swupdate-ipc.html" /> 
+    <link rel="prev" title="SWUpdate: API for external programs" href="swupdate-ipc.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,9 +38,9 @@
           <a href="roadmap.html" title="Project’s road-map"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="swupdate-ipc.html" title="swupdate: API for external programs"
+          <a href="swupdate-ipc.html" title="SWUpdate: API for external programs"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 2016.- documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2016.04 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -91,7 +91,7 @@ here.</p>
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="swupdate-ipc.html"
-                        title="previous chapter">swupdate: API for external programs</a></p>
+                        title="previous chapter">SWUpdate: API for external programs</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="roadmap.html"
                         title="next chapter">Project&#8217;s road-map</a></p>
@@ -127,13 +127,13 @@ here.</p>
           <a href="roadmap.html" title="Project’s road-map"
              >next</a> |</li>
         <li class="right" >
-          <a href="swupdate-ipc.html" title="swupdate: API for external programs"
+          <a href="swupdate-ipc.html" title="SWUpdate: API for external programs"
              >previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 2016.- documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2016.04 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2013-2015, Stefano Babic.
+        &copy; Copyright 2013-2016, Stefano Babic.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.2.
     </div>
   </body>
