--- a/swupdate.html
+++ b/swupdate.html
@@ -509,35 +509,40 @@ copy approach. Example:
 </td>
 <td>run usage with help</td>
 </tr>
-<tr class="row-odd"><td>-s</td>
+<tr class="row-odd"><td>-k</td>
+<td>string</td>
+<td>Active if CONFIG_SIGNED is set
+Filename with the public key</td>
+</tr>
+<tr class="row-even"><td>-s</td>
 <td><ul class="first last simple">
 <li></li>
 </ul>
 </td>
 <td>run SWUpdate in daemon mode</td>
 </tr>
-<tr class="row-even"><td>-i &lt;file&gt;</td>
+<tr class="row-odd"><td>-i &lt;file&gt;</td>
 <td>string</td>
 <td>run SWUpdate with a local .swu file</td>
 </tr>
-<tr class="row-odd"><td>-v</td>
+<tr class="row-even"><td>-v</td>
 <td><ul class="first last simple">
 <li></li>
 </ul>
 </td>
 <td>activate verbose output</td>
 </tr>
-<tr class="row-even"><td>-w &lt;parms&gt;</td>
+<tr class="row-odd"><td>-w &lt;parms&gt;</td>
 <td>string</td>
 <td>start internal webserver and pass to it
 a command line string.</td>
 </tr>
-<tr class="row-odd"><td>-H
+<tr class="row-even"><td>-H
 &lt;board:rev&gt;</td>
 <td>string</td>
 <td>set board name and Hardware revision</td>
 </tr>
-<tr class="row-even"><td>-t &lt;timeout&gt;</td>
+<tr class="row-odd"><td>-t &lt;timeout&gt;</td>
 <td>integer</td>
 <td>Timeout for connection lost when
 downloading</td>
