--- a/swupdate.html
+++ b/swupdate.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>SWUpdate: software update for embedded system &mdash; Embedded Software Update Documentation 2016.04 documentation</title>
+    <title>SWUpdate: software update for embedded system &mdash; Embedded Software Update Documentation 2016.07 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2016.04',
+        VERSION:     '2016.07',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Embedded Software Update Documentation 2016.04 documentation" href="index.html" />
+    <link rel="top" title="Embedded Software Update Documentation 2016.07 documentation" href="index.html" />
     <link rel="next" title="SWUpdate: syntax and tags with the default parser" href="sw-description.html" />
     <link rel="prev" title="Software Management on embedded systems" href="overview.html" /> 
   </head>
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="overview.html" title="Software Management on embedded systems"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 2016.04 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2016.07 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -469,13 +469,11 @@ called like this:</p>
 <tbody valign="top">
 <tr class="row-even"><td>-b &lt;string&gt;</td>
 <td>string</td>
-<td><p class="first">Active only if CONFIG_MTD is set
+<td>Active only if CONFIG_MTD is set
 It allows to blacklist MTDs when SWUpdate
 searches for UBI volumes.
-Example: U-Boot and environment in MTD0-1:</p>
-<blockquote class="last">
-<div>-b &#8220;0 1&#8221;</div></blockquote>
-</td>
+Example: U-Boot and environment in MTD0-1:
+<strong>swupdate -b &#8220;0 1&#8221;</strong></td>
 </tr>
 <tr class="row-odd"><td>-d &lt;URL&gt;</td>
 <td>string</td>
@@ -671,7 +669,7 @@ of sw-description, that must be the first one.</p>
         <li class="right" >
           <a href="overview.html" title="Software Management on embedded systems"
              >previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 2016.04 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2016.07 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
