Updated generated documentation
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/sw-description.html
+++ b/sw-description.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="Embedded Software Update Documentation 2016.07 documentation" href="index.html" />
     <link rel="next" title="Update images from verified source" href="signed_images.html" />
-    <link rel="prev" title="SWUpdate: software update for embedded system" href="swupdate.html" /> 
+    <link rel="prev" title="Suricatta daemon mode" href="suricatta.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,7 +38,7 @@
           <a href="signed_images.html" title="Update images from verified source"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="swupdate.html" title="SWUpdate: software update for embedded system"
+          <a href="suricatta.html" title="Suricatta daemon mode"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">Embedded Software Update Documentation 2016.07 documentation</a> &raquo;</li> 
       </ul>
@@ -683,8 +683,8 @@ compared with the entries in</td>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="swupdate.html"
-                        title="previous chapter">SWUpdate: software update for embedded system</a></p>
+  <p class="topless"><a href="suricatta.html"
+                        title="previous chapter">Suricatta daemon mode</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="signed_images.html"
                         title="next chapter">Update images from verified source</a></p>
@@ -720,7 +720,7 @@ compared with the entries in</td>
           <a href="signed_images.html" title="Update images from verified source"
              >next</a> |</li>
         <li class="right" >
-          <a href="swupdate.html" title="SWUpdate: software update for embedded system"
+          <a href="suricatta.html" title="Suricatta daemon mode"
              >previous</a> |</li>
         <li><a href="index.html">Embedded Software Update Documentation 2016.07 documentation</a> &raquo;</li> 
       </ul>
