Synchronized with sources
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/sw-description.html
+++ b/sw-description.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>SWUpdate: syntax and tags with the default parser &mdash; Embedded Software Update Documentation 2016.07 documentation</title>
+    <title>SWUpdate: syntax and tags with the default parser &mdash; Embedded Software Update Documentation 2016.10 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2016.07',
+        VERSION:     '2016.10',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Embedded Software Update Documentation 2016.07 documentation" href="index.html" />
+    <link rel="top" title="Embedded Software Update Documentation 2016.10 documentation" href="index.html" />
     <link rel="next" title="Update images from verified source" href="signed_images.html" />
     <link rel="prev" title="Suricatta daemon mode" href="suricatta.html" /> 
   </head>
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="suricatta.html" title="Suricatta daemon mode"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 2016.07 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2016.10 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -647,6 +647,24 @@ files</td>
 if set, name and version are
 compared with the entries in</td>
 </tr>
+<tr class="row-even"><td>encrypted</td>
+<td>boolean</td>
+<td>images
+files
+scripts</td>
+<td>flag
+if set, file is encrypted
+and must be decrypted before
+installing.</td>
+</tr>
+<tr class="row-odd"><td>data</td>
+<td>string</td>
+<td>images
+files
+scripts</td>
+<td>This is used to pass arbitrary data
+to a handler.</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -722,7 +740,7 @@ compared with the entries in</td>
         <li class="right" >
           <a href="suricatta.html" title="Suricatta daemon mode"
              >previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 2016.07 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2016.10 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
