--- a/swupdate-ipc.html
+++ b/swupdate-ipc.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>SWUpdate: API for external programs &mdash; Embedded Software Update Documentation 2016.07 documentation</title>
+    <title>SWUpdate: API for external programs &mdash; Embedded Software Update Documentation 2016.10 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2016.07',
+        VERSION:     '2016.10',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,8 +23,8 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Embedded Software Update Documentation 2016.07 documentation" href="index.html" />
-    <link rel="next" title="Help and support" href="help_and_support.html" />
+    <link rel="top" title="Embedded Software Update Documentation 2016.10 documentation" href="index.html" />
+    <link rel="next" title="Getting information on running update" href="progress.html" />
     <link rel="prev" title="Handlers" href="handlers.html" /> 
   </head>
   <body>
@@ -35,12 +35,12 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="help_and_support.html" title="Help and support"
+          <a href="progress.html" title="Getting information on running update"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="handlers.html" title="Handlers"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 2016.07 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2016.10 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -139,8 +139,8 @@ of the upgrade.</p>
   <p class="topless"><a href="handlers.html"
                         title="previous chapter">Handlers</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="help_and_support.html"
-                        title="next chapter">Help and support</a></p>
+  <p class="topless"><a href="progress.html"
+                        title="next chapter">Getting information on running update</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/swupdate-ipc.txt"
@@ -170,12 +170,12 @@ of the upgrade.</p>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="help_and_support.html" title="Help and support"
+          <a href="progress.html" title="Getting information on running update"
              >next</a> |</li>
         <li class="right" >
           <a href="handlers.html" title="Handlers"
              >previous</a> |</li>
-        <li><a href="index.html">Embedded Software Update Documentation 2016.07 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Embedded Software Update Documentation 2016.10 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
