--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,18 @@
     </fieldset>
   </form>
 
+  <!--
+     If swupdate mongoose runs with root privileges,
+     you can call /rebootTarget.
+
+     If swupdate mongoose runs as a user, www for example,
+     you have configure swupdate to run reboot as post-update-command (-p <cmd>)
+     and call /postUpdateCommand from web page.
+
+     The javascript function is provided in recovery.js.
+
+     <input type='submit' value='Reboot Device' onclick="postUpdateCommand();">
+  -->
   <form method='post' action='/rebootTarget'>
     <input type='submit' value='Reboot Device'>
   </form>
