www: web-app: Formulate URIs to be reverse proxy -friendly
Define the /ws and /upload URIs in a way that allows reverse proxy
to pass configured service URIs to the SWUpdate webserver listening
port.

This makes e.g. the following Nginx location functional:

    location /swupdate/ {
        < other settings ...>
        proxy_pass http://127.0.0.1:8080/;
    }

Signed-off-by: Sami Hartikainen <sami.hartikainen@teleste.com>

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -62,7 +62,7 @@
           </div>
           <div class="card-body">
             <!-- Dropzone Button for drag&drop files -->
-            <form class="dropzone border rounded mb-3" id="dropzone" action="/upload" method="post" enctype="multipart/form-data">
+            <form class="dropzone border rounded mb-3" id="dropzone" action="./upload" method="post" enctype="multipart/form-data">
               <div class="dz-default dz-message">
                 <span class="dz-message">Click hier or drop a software update image.</span>
               </div>
