web-app: Emphasize the SW of SWUpdate in the title to improve readability
Signed-off-by: Stefan Herbrechtsmeier <stefan.herbrechtsmeier@weidmueller.com>

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -49,7 +49,7 @@
   <div class="container">
     <!-- Header -->
     <div class="jumbotron my-3">
-      <h1 class="display-4">SWUpdate</h1>
+      <h1 class="display-4"><span class="text-primary">SW</span>Update</h1>
       <p class="lead">Software update for embedded systems</p>
       <p>Upload an software image below or restart the system at the top right.</p>
     </div>
