Fix typo in web-app
`Click hier` -> `Click here`

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -64,7 +64,7 @@
             <!-- Dropzone Button for drag&drop files -->
             <form class="dropzone border rounded mb-3" id="dropzone" action="./upload" method="post" enctype="multipart/form-data">
               <div class="dz-default dz-message">
-                <span class="dz-message">Click hier or drop a software update image.</span>
+                <span class="dz-message">Click here or drop a software update image.</span>
               </div>
             </form>
 
