--- a/web-app/index.html
+++ b/web-app/index.html
@@ -51,7 +51,7 @@
     <div class="jumbotron my-3">
       <h1 class="display-4"><span class="text-primary">SW</span>Update</h1>
       <p class="lead">Software update for embedded systems</p>
-      <p>Upload an software image below or restart the system at the top right.</p>
+      <p>Upload a software image below, or restart the system at the top right corner.</p>
     </div>
 
     <div class="row my-3">
@@ -64,26 +64,26 @@
             <!-- Dropzone Button for drag&drop files -->
             <form class="dropzone border rounded mb-3" id="dropzone" action="./upload" method="post" enctype="multipart/form-data">
               <div class="dz-default dz-message">
-                <span class="dz-message">Click hier or drop a software update image.</span>
+                <span class="dz-message">Click here, or drag and drop a software update image file to this area.</span>
               </div>
             </form>
 
             <!-- Status -->
             <div id="swu-idle" class="alert alert-secondary">
-              <i class="fas fa-info-circle"></i> Update not started
+              <i class="fas fa-info-circle"></i> Update not started.
             </div>
             <div id="swu-run" class="alert alert-warning" style="display: none;">
               <i class="fas fa-exclamation-triangle"></i>
               Updating may take a few minutes, please don't turn off the power.
             </div>
             <div id="swu-success" class="alert alert-success" style="display: none;">
-              <i class="fas fa-check-circle"></i> Successful updated
+              <i class="fas fa-check-circle"></i> Updated successfully.
             </div>
             <div id="swu-failure" class="alert alert-danger" style="display: none;">
-              <i class="fas fa-times-circle"></i> Update failed
+              <i class="fas fa-times-circle"></i> Update failed.
             </div>
             <div id="swu-done" class="alert alert-info" style="display: none;">
-              <i class="fas fa-sync"></i> Restarting system
+              <i class="fas fa-sync"></i> Restarting system.
             </div>
 
             <!-- Progress -->
